tests/e2e/app_secrets_foo_readonly_transitive.error
Error: syntax error in story at line 2, column 1

2|    f.foo = 1
      ^^^^^

E0127: `f[]` is readonly and can not be assigned to.
