tests/e2e/app_secrets_foo_readonly_transitive.story
f = app.secrets
f.foo = 1
